@@ -216,6 +216,54 @@ Request.prototype.__defineGetter__("url", function url() {
 });
 
 /**
+ * Returns +true+ if this request indicates the client accepts the given
+ * +mediaType+.
+ */
+Request.prototype.accept = function accept(mediaType) {
+    if (!this.env["strata.request.accept"]) {
+        this.env["strata.request.accept"] = new Accept(env.httpAccept);
+    }
+
+    return this.env["strata.request.accept"].accept(mediaType);
+}
+
+/**
+ * Returns +true+ if this request indicates the client accepts the given
+ * +charset+.
+ */
+Request.prototype.acceptCharset = function acceptCharset(charset) {
+    if (!this.env["strata.request.acceptCharset"]) {
+        this.env["strata.request.acceptCharset"] = new AcceptCharset(env.httpAcceptCharset);
+    }
+
+    return this.env["strata.request.acceptCharset"].accept(charset);
+}
+
+/**
+ * Returns +true+ if this request indicates the client accepts the given
+ * +encoding+.
+ */
+Request.prototype.acceptEncoding = function acceptEncoding(encoding) {
+    if (!this.env["strata.request.acceptEncoding"]) {
+        this.env["strata.request.acceptEncoding"] = new AcceptEncoding(env.httpAcceptEncoding);
+    }
+
+    return this.env["strata.request.acceptEncoding"].accept(encoding);
+}
+
+/**
+ * Returns +true+ if this request indicates the client accepts the given
+ * +language+.
+ */
+Request.prototype.acceptLanguage = function acceptLanguage(language) {
+    if (!this.env["strata.request.acceptLanguage"]) {
+        this.env["strata.request.acceptLanguage"] = new AcceptLanguage(env.httpAcceptLanguage);
+    }
+
+    return this.env["strata.request.acceptLanguage"].accept(language);
+}
+
+/**
  * Returns the prefix that is used for the names of file uploads.
  */
 Request.prototype.__defineGetter__("uploadPrefix", function uploadPrefix() {
