@@ -186,7 +186,41 @@ exports.isRe = function isRe(obj) {
 }
 
 /**
- * A helper for returning a 404 response.
+ * Returns +true+ if the given +obj+ has no properties.
+ */
+exports.isEmptyObject = function isEmptyObject(obj) {
+    for (var key in obj) {
+        return false;
+    }
+
+    return true;
+}
+
+/**
+ * Compares the +length+ property of +a+ and +b+. Suitable for use as the
+ * return value in an Array.prototype.sort callback.
+ */
+exports.compareLength = function compareLength(a, b) {
+    if (a.length < b.length) {
+        return -1;
+    }
+
+    if (b.length < a.length) {
+        return 1;
+    }
+
+    return 0;
+}
+
+/**
+ * Sorts the given +array+ by the length of its members.
+ */
+exports.sortByLength = function sortByLength(array) {
+    array.sort(exports.compareLength);
+}
+
+/**
+ * A helper app for returning a 404 response.
  */
 exports.notFound = function notFound(env, callback) {
     callback(404, {
